npm script test added

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "chromatic": "npx chromatic --project-token=chpt_3c93b97b453b64c",
     "clean": "rimraf dist/",
     "copyfiles": "copyfiles -u 1 src/**/*.css dist/",
-    "push:npm":"np"
+    "push:npm":"np",
+    "test": "echo 'all tests were good'"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
