--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mbari-custom-components",
   "private": false,
-  "version": "0.0.1-rc4",
+  "version": "0.1.0",
   "type": "module",
   "keywords": [
     "react",
